# EFT_Scratch

./: .gitignore  CMakeLists.txt  HilberDeterminant.cpp  README.md  SinTaylorExpansion.c  fpcore2c.py  gausselm.c  runtime_HilberDeterminant.cpp  runtime_SinTaylorExpansion.cpp  runtime_gausselm.cpp  shadow_memory.cpp  shadow_memory.hpp  shadow_stack.cpp  shadow_stack.hpp  tmp_mta_space.cpp  tmp_mta_space.hpp
include/eft/: eft.hpp  shadow_memory.hpp  shadow_stack.hpp  tmp_mta_space.hpp
src/eft/: shadow_memory.cpp  shadow_stack.cpp  tmp_mta_space.cpp
tests/: gausselm.c  gausselm_eft.cpp  jetEngine.c  jetEngine_eft.cpp  kepler1.c  kepler1_eft.cpp  matrixDeterminant.c  matrixDeterminant_eft.cpp  rump.c  rump_eft.cpp  sqrtAdd.c  sqrtAdd_eft.cpp
